# synchronik

./: .gitignore  .ignore  Cargo.toml  Jankyfile  Procfile  README.adoc  README.md  agent-api-description.yml  api-description-agent.yml  api-description-server.yml  api-description.yml  ci.janky.yml  ci.synchronik.yml  sqlx-data.json
apidocs/: api-description.json
examples/: server.yml
examples/synchronik.d/: agents.yml  project-inline.yml  project-self.yml
migrations/: 20230128225903_agent.sql  20230129223835_project_run.sql
scripts/: prepare-agent-api  prepare-api-description  prepare-server-api  shoreman.sh
src/: lib.rs  main.rs
src/agent/: caps.rs  main.rs
src/server/: config.rs  dao.rs  main.rs  routes.rs
src/server/models/: mod.rs  project.rs  run.rs  rundefinition.rs  runrow.rs  scminfo.rs
static/: theme.css
views/: _navbar.hbs  index.hbs  project.hbs
views/components/agent/: compact.hbs
