[package]
name = "janky"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "janky-server"
path = "src/server/main.rs"

[[bin]]
name = "janky-agent"
path = "src/agent/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = "0.4"
dotenv = "~0.15"
driftwood = "0"
# Command line parsing
gumdrop = "0.8"
handlebars = { version = "4", features = ["dir_source"] }
html-escape = "0.2"
log = "~0.4.8"
# Needed for GitHub API calls
octocrab = "0.18"
os_pipe = "1"
pretty_env_logger = "~0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "~0.6", features = ["chrono", "json", "migrate", "offline", "sqlite", "uuid", "runtime-async-std-rustls"] }
tide = "0"
uuid = { version = "1", features = ["v4", "serde"]}
url = "2"
tide-websockets = "0.4.0"
